# 3dEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh  vcpkg.json
bootstrap/: install_linux_dependencies.sh  install_vcpkg.sh  setup.sh
src/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Triangle.h  Viewer.cpp  main.cpp
src/Core/: DrawContext.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Shape.h  Transform.cpp  Transform.h
src/Objects/Cameras/: Camera.cpp  Camera.h
src/Objects/Display/: Gizmo.cpp  Gizmo.h  GizmoRotation.h  Grid.cpp  Grid.h
src/Objects/Display/Gizmo/: GizmoRotation.cpp  GizmoScale.cpp  GizmoScale.h  GizmoTranslation.cpp  GizmoTranslation.h
src/Objects/Lights/: PointLight.h  PointLightObject.cpp  PointLightObject.h
src/Objects/Primitives/: Cube.cpp  Cube.h  Sphere.cpp  Sphere.h  Triangle.cpp
src/ui/: MainWindow.cpp  MainWindow.h  MenuContext.cpp  MenuContext.h
src/ui/Outliner/: OutlinerWidget.cpp  OutlinerWidget.h  SceneModel.cpp  SceneModel.h
src/ui/Viewers/3d/: ViewerWidget3D.cpp  ViewerWidget3D.h
